--- a/appDev/app6K/app/style/app.css
+++ b/appDev/app6K/app/style/app.css
@@ -10,80 +10,98 @@
 */
 /* ------------------------------------ box model */
 *, *:before, *:after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 html {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 html, body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 /* ------------------------------------ markup defaults */
 *, ::before, ::after {
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+}
 
 nav ul, nav ol {
   padding: 0;
   margin: 0;
-  list-style-type: none; }
+  list-style-type: none;
+}
 
 details, article, aside, footer, header, nav, section, main {
-  display: block; }
+  display: block;
+}
 
 figure, figcaption, fieldset, legend {
   display: block;
   margin: 0;
   padding: 0;
   border: 0;
-  white-space: normal; }
+  white-space: normal;
+}
 
 summary {
-  display: list-item; }
+  display: list-item;
+}
 
 canvas {
-  display: inline-block; }
+  display: inline-block;
+}
 
 [hidden], template {
-  display: none; }
+  display: none;
+}
 
 /* ------------------------------------ content defaults */
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  cursor: default; }
+  cursor: default;
+}
 
 body {
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased;
+}
 
 a, area, button, input, label, select, summary, textarea, [tabindex] {
   -ms-touch-action: manipulation;
-  touch-action: manipulation; }
+  touch-action: manipulation;
+}
 
 a {
   background-color: transparent;
   text-decoration: none;
-  color: inherit; }
+  color: inherit;
+}
 
 img, svg {
   display: block;
   border: none;
-  max-width: 100%; }
+  max-width: 100%;
+}
 
 audio, canvas, iframe, img, svg, video {
-  vertical-align: middle; }
+  vertical-align: middle;
+}
 
 hr {
   min-height: 3.2rem;
   border: 0;
   background: transparent;
-  box-shadow: none; }
+  box-shadow: none;
+}
 
 abbr[title] {
   border-bottom: none;
   text-decoration: underline;
-  text-decoration: underline dotted; }
+  text-decoration: underline dotted;
+}
 
 /* ------------------------------------ end of html base */
 /* ==============================================================
@@ -97,17 +115,21 @@ abbr[title] {
   -ms-user-select: none;
   /* IE 10+ */
   user-select: none;
-  /* Likely future */ }
-  .kliker:hover, .kliker:focus {
-    cursor: pointer;
-    outline: 1rem solid rgba(168, 220, 217, 0.25); }
+  /* Likely future */
+}
+.kliker:hover, .kliker:focus {
+  cursor: pointer;
+  outline: 1rem solid rgba(168, 220, 217, 0.25);
+}
 
 /**/
 .has-shadow-overlay, .has-active-sidebar {
-  overflow: hidden; }
-  .has-shadow-overlay .screen-shadow-overlay, .has-active-sidebar .screen-shadow-overlay {
-    opacity: 0.8;
-    pointer-events: auto; }
+  overflow: hidden;
+}
+.has-shadow-overlay .screen-shadow-overlay, .has-active-sidebar .screen-shadow-overlay {
+  opacity: 0.8;
+  pointer-events: auto;
+}
 
 .screen-shadow-overlay {
   position: fixed;
@@ -118,21 +140,55 @@ abbr[title] {
   left: 0;
   pointer-events: none;
   background-color: black;
-  opacity: 0; }
+  opacity: 0;
+}
 
 /**/
 /* EOF: workers */
-.chapter {
-  position: relative; }
-  .chapter .chapter-top {
-    position: sticky;
-    top: 0; }
+p {
+  margin: 0;
+}
 
+.chapter {
+  position: relative;
+}
+.chapter .chapter-top {
+  position: sticky;
+  top: 0;
+}
+
+.title {
+  margin-top: -0.8rem;
+  margin-bottom: -0.8rem;
+}
+
+.toolbar {
+  background-color: pink;
+  float: right;
+}
+
+/*/// chapter scroll snap
+.body-wrap { scroll-snap-type: y proximity; }
+.chapter, .fullscreen { scroll-snap-align: start; }
+//*/
+.welcome-boxes-template {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: stretch;
+  align-content: center;
+}
+.welcome-boxes-template, .welcome-boxes-template > * {
+  margin: 1.2rem;
+}
 [content-action] {
-  display: none; }
+  display: none;
+}
 
 [bg] {
-  background-color: rgba(14, 20, 47, 0.7); }
+  background-color: rgba(14, 20, 47, 0.7);
+}
 
 .dev-panel, dev-panel {
   background-color: rgba(14, 20, 47, 0.7);
@@ -141,7 +197,8 @@ abbr[title] {
   display: flex;
   justify-content: center;
   align-items: center;
-  align-content: center; }
+  align-content: center;
+}
 
 .dev-item, dev-item {
   background-color: rgba(14, 20, 47, 0.7);
@@ -151,7 +208,8 @@ abbr[title] {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  align-content: center; }
+  align-content: center;
+}
 
 .dev-box, dev-box {
   background-color: rgba(14, 20, 47, 0.7);
@@ -163,7 +221,8 @@ abbr[title] {
   display: flex;
   justify-content: center;
   align-items: center;
-  align-content: center; }
+  align-content: center;
+}
 
 /**/
 /* ------------------------------------ body box model */
@@ -172,73 +231,96 @@ abbr[title] {
   margin-top: 0;
   margin-bottom: 0;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .body-wrap-header {
   position: sticky;
   top: 0;
-  background-color: white; }
+  background-color: white;
+}
 
 .body-wrap-footer {
-  margin-top: auto; }
+  margin-top: auto;
+}
 
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   html.has-body-wrap {
     display: flex;
-    flex-direction: column; } }
+    flex-direction: column;
+  }
+}
 
 /* */
 /*
     app grid system
     v2018.11.23
 */
-.layout-for-markup, .block, .block-box, .grid-leftside, .grid-rightside, .layout-for-article, .use-grid {
+* {
+  grid-column: main;
+}
+
+.use-grid, .layer, .layout-for-article, .grid-rightside, .grid-leftside, .layout-for-markup, .block, .box {
   display: grid;
   grid-auto-rows: min-content;
   grid-auto-flow: row;
   grid-template-columns:  [full-start merge-start overmain-start main-start aside-start]  auto  [full-end merge-end overmain-end main-end aside-end] ;
   align-items: start;
-  grid-gap: 1.8rem 0; }
-  .layout-for-markup *, .block *, .block-box *, .grid-leftside *, .grid-rightside *, .layout-for-article *, .use-grid * {
-    grid-column: main; }
-  @supports (grid-gap: 2.4rem) {
-    .layout-for-markup *, .block *, .block-box *, .grid-leftside *, .grid-rightside *, .layout-for-article *, .use-grid * {
-      margin-top: 0;
-      margin-bottom: 0; } }
+  grid-gap: 1.6rem 0;
+}
 
-.layout-for-markup, .block, .block-box, .grid-leftside, .grid-rightside {
-  grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start aside-start]  auto  [main-end aside-end]  2.4rem  [full-end merge-end overmain-end] ; }
+.grid-rightside, .grid-leftside, .layout-for-markup, .block, .box {
+  grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start aside-start]  auto  [main-end aside-end]  2.4rem  [full-end merge-end overmain-end] ;
+}
 
-.layout-for-article, .use-grid {
-  grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start aside-start]  auto  [main-end aside-end]  2.4rem  [full-end merge-end overmain-end] ; }
-  @media (min-width: 901px) {
-    .layout-for-article, .use-grid {
-      grid-template-columns:  [full-start]  minmax(0, 1fr)  [merge-start overmain-start]  2.4rem  [main-start]  minmax(0, 64rem)  [main-end]  2.4rem  [overmain-end]  2.4rem  [aside-start]  26rem  [aside-end]  2.4rem  [merge-end]  minmax(0, 1fr)  [full-end] ; } }
+.use-grid, .layer, .layout-for-article {
+  grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start aside-start]  auto  [main-end aside-end]  2.4rem  [full-end merge-end overmain-end] ;
+}
+@media (min-width: 901px) {
+  .use-grid, .layer, .layout-for-article {
+    grid-template-columns:  [full-start]  minmax(0, 1fr)  [merge-start overmain-start]  2.4rem  [main-start]  minmax(0, 64rem)  [main-end]  2.4rem  [overmain-end]  2.4rem  [aside-start]  26rem  [aside-end]  2.4rem  [merge-end]  minmax(0, 1fr)  [full-end] ;
+  }
+}
 
-.use-grid {
-  grid-column: full; }
+.use-grid, .layer {
+  grid-column: full;
+}
+
+.break-grid {
+  grid-column: full;
+}
 
 .grid-leftside {
-  grid-column: full-start / overmain-end; }
-  @media (min-width: 901px) {
-    .grid-leftside {
-      grid-template-columns:  [full-start]  minmax(0, 1fr)  [merge-start overmain-start aside-start]  2.4rem  [main-start]  minmax(0, 64rem)  [main-end]  2.4rem  [full-end merge-end overmain-end aside-end] ; } }
+  grid-column: full-start/overmain-end;
+}
+@media (min-width: 901px) {
+  .grid-leftside {
+    grid-template-columns:  [full-start]  minmax(0, 1fr)  [merge-start overmain-start aside-start]  2.4rem  [main-start]  minmax(0, 64rem)  [main-end]  2.4rem  [full-end merge-end overmain-end aside-end] ;
+  }
+}
 
 .grid-rightside {
-  grid-column: overmain-start / full-end; }
-  @media (min-width: 901px) {
-    .grid-rightside {
-      grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start]  minmax(0, 64rem)  [main-end]  2.4rem  [overmain-end]  2.4rem  [aside-start]  26rem  [aside-end]  2.4rem  [merge-end]  minmax(0, 1fr)  [full-end] ; } }
+  grid-column: overmain-start/full-end;
+}
+@media (min-width: 901px) {
+  .grid-rightside {
+    grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start]  minmax(0, 64rem)  [main-end]  2.4rem  [overmain-end]  2.4rem  [aside-start]  26rem  [aside-end]  2.4rem  [merge-end]  minmax(0, 1fr)  [full-end] ;
+  }
+}
 
 .layer {
-  grid-column: full; }
+  padding-top: 2.4rem;
+  padding-bottom: 2.4rem;
+}
 
-.block, .block-box {
-  grid-column: overmain; }
+.block, .box {
+  grid-column: overmain;
+}
 
-.block-box {
-  padding-top: 1.8rem;
-  padding-bottom: 1.8rem; }
+.box {
+  padding-top: 2.4rem;
+  padding-bottom: 2.4rem;
+}
 
 /*
 .layer {
@@ -299,33 +381,39 @@ abbr[title] {
   flex-direction: column;
   justify-content: space-between;
   align-content: stretch;
-  align-items: stretch; }
-  .fullscreen.has-fixed-background:before {
-    position: fixed;
-    z-index: -1;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    pointer-events: none;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center; }
-  .fullscreen .fullscreen-top {
-    order: 1;
-    flex-grow: 0; }
-  .fullscreen .fullscreen-body {
-    order: 2;
-    flex-grow: 2; }
-  .fullscreen .fullscreen-bottom {
-    order: 3;
-    flex-grow: 0; }
-  .fullscreen .fullscreen-body,
-  .fullscreen .fullscreen-bottom {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center; }
+  align-items: stretch;
+}
+.fullscreen.has-fixed-background:before {
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  pointer-events: none;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.fullscreen .fullscreen-top {
+  order: 1;
+  flex-grow: 0;
+}
+.fullscreen .fullscreen-body {
+  order: 2;
+  flex-grow: 2;
+}
+.fullscreen .fullscreen-bottom {
+  order: 3;
+  flex-grow: 0;
+}
+.fullscreen .fullscreen-body,
+.fullscreen .fullscreen-bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
 
 /* */
 /* ==============================================================
@@ -341,16 +429,24 @@ abbr[title] {
   overflow: auto;
   transform: translateX(0);
   transition: transform 200ms ease-in;
-  background-color: white; }
-  @media screen and (min-width: 44rem) {
-    .sidebar {
-      max-width: 38rem; } }
-  .sidebar.is-active {
-    transition-timing-function: ease-out;
-    transform: translateX(-100%); }
+  background-color: white;
+}
+@media screen and (min-width: 44rem) {
+  .sidebar {
+    max-width: 38rem;
+  }
+}
+.sidebar.is-active {
+  transition-timing-function: ease-out;
+  transform: translateX(-100%);
+}
 
 /**/
 /* EOF: Sidebars */
+.design-template .fullscreen {
+  background-image: url(../../art/design-template/bg-light.jpg);
+}
+
 /* ==============================================================
  # Describe HTML & BODY
 ============================================================== */
@@ -360,20 +456,25 @@ abbr[title] {
   margin-top: 0;
   margin-bottom: 0;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .screen-header {
   position: sticky;
   top: 0;
-  background-color: white; }
+  background-color: white;
+}
 
 .screen-footer {
-  margin-top: auto; }
+  margin-top: auto;
+}
 
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   html {
     display: flex;
-    flex-direction: column; } }
+    flex-direction: column;
+  }
+}
 
 /* */
 /* EOF: layout-screen */
