--- a/appDev/app6K/app/style/app_components/layout-grid.scss
+++ b/appDev/app6K/app/style/app_components/layout-grid.scss
@@ -3,16 +3,24 @@
     v2018.11.23
 */
 
-//* ------------------------------------ code constructor
+//* ------------------------------------ dependencies
 
-//$margin-def: 2.4rem;
-//$margin-less: 0.75*$margin-def;
+$margin-def:  $margin-def;
+$margin-less: $margin-less;
+$screenNotTablet: $screenNotTablet;
+$screenForTablet: $screenForTablet;
+
+//* ------------------------------------ setup
+
 $grid-settings--main-maximum: 64rem;
 $grid-settings--aside:        26rem;
 
 $screenForArticleLayout: $screenNotTablet;
 $screenNotArticleLayout: $screenForTablet;
 
+* { grid-column: main; }
+
+//* ------------------------------------ code constructor
 
 $grid_formula--base:
     unquote(" [full-start merge-start overmain-start main-start aside-start] ")
@@ -82,8 +90,6 @@ $grid_formula--article-right-wrapped:
     grid-template-columns: $grid_formula--base;
     align-items: start;
     grid-gap: $margin-less 0;
-    * { grid-column: main; }
-    * { @supports (grid-gap:$margin-def) { margin-top:0; margin-bottom:0; } }
 }
 %grid_layout-for-markup {
     @extend %grid_layout--base;
@@ -108,6 +114,9 @@ $grid_formula--article-right-wrapped:
     grid-column: full;
     @extend %grid_layout-for-article;
 }
+.break-grid {
+    grid-column: full;
+}
 .grid-leftside {
     grid-column: full-start / overmain-end;
     @extend %grid_layout-for-markup;
@@ -123,16 +132,18 @@ $grid_formula--article-right-wrapped:
     }
 }
 .layer {
-    grid-column: full;
+    @extend .use-grid;
+    padding-top:    $margin-def;
+    padding-bottom: $margin-def;
 }
 .block {
     grid-column: overmain;
     @extend .layout-for-markup;
 }
-.block-box {
+.box {
     @extend .block;
-    padding-top:    $margin-less;
-    padding-bottom: $margin-less;
+    padding-top:    $margin-def;
+    padding-bottom: $margin-def;
 }
 
 
