--- a/appDev/app6K/app/style/app_core/settings.scss
+++ b/appDev/app6K/app/style/app_core/settings.scss
@@ -12,7 +12,7 @@ $z-index-shadowOverlay:              2;
 
 $dim:         0.8rem;
 $margin-def:  2.4rem;
-$margin-less: 0.75*$margin-def;
+$margin-less: 1.6rem;
 $margin-half: 0.50*$margin-def;
 
 /* ------------------------------------ screen sizes */
