--- a/appDev/app6K/app/style/app_components/_workers-dev.scss
+++ b/appDev/app6K/app/style/app_components/_workers-dev.scss
@@ -1,8 +1,25 @@
 //* ------------------------------------ pending
 
+html { font-size: 10px;   line-height: 1; }
+body { font-size: 1.6rem; line-height: 1.5; }
 
-p {
-    margin: 0;
+h1,h2,h3,h4,p { margin: 0; color: inherit; }
+
+h1 {
+    font-size: 2em;
+    line-height: 1;
+}
+h2 {
+    font-size: 1.5em;
+    line-height: 1.33333;
+}
+h3 {
+    font-size: 1.25em;
+    line-height: 1.2;
+}
+h4 {
+    font-size: inherit;
+    line-height: inherit;
 }
 
 .chapter {
@@ -41,11 +58,121 @@ $margin-half: $margin-half;
     align-items: stretch;
     align-content: center;
     &, &>* { margin: $margin-half; }
-    .welcome-item {
-        
-    }
 }
 
+$margin-def:  $margin-def; // 2.4rem
+$margin-half: $margin-half;// $margin-def / 2
+.welcome-boxes-layout {
+
+    // column layout
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: stretch;
+    align-content: center;
+    &, &>* { margin: $margin-half; }
+}
+%welcome-item--is-blue-box {
+    background-color: hsla(229, 55%, 12%, 0.7);
+    color: white;
+}
+.welcome-item {
+    @extend %welcome-item--is-blue-box;
+    // components
+    .block:not(:last-child) {
+        margin-bottom: $margin-def;
+    }
+}
+.welcome-links {
+    @extend .welcome-item;
+    max-width: 32em;
+}
+.welcome-form {
+    @extend .welcome-item;
+    max-width: 28em;
+
+    // has smaller text
+    font-size: 0.8em;
+    line-height: 1.2;
+}
+
+
+
+$margin-def:  $margin-def; // 2.4rem
+$margin-less: $margin-less;// 1.6rem
+$color--form-design-bg:   white;
+$color--form-design-text: black;
+%form-components--plains {
+    .form-item {
+        flex-direction: row;
+        align-items: center;
+        &>label { flex-grow: 0; }
+    }
+    .form-item + .form-item,
+    .form-textarea {
+        border-top: 1px solid rgba(0,0,0,.25);
+    }
+    label {
+        margin-right: 1em;
+        padding: 1em 0;
+    }
+    input {
+        border: 0;
+        background-color: transparent;
+        color: inherit;
+        box-shadow: none;
+    }
+    .form-textarea {
+        flex-wrap: wrap;
+    }
+    textarea+label {
+        width: 100%;
+        padding-bottom: 0.4em;
+        margin-right: 0;
+    }
+    textarea {
+        background-color: transparent;
+        color: inherit;
+        border-width: 1px;
+        box-shadow: none;
+    }
+}
+.form-design--plains {
+    @extend %form-components--plains;
+    min-width: 24em;
+    .button {
+        display: block;
+        border-radius: 4px;
+        padding: 1em;
+        border: 0;
+        font-size: 1.5em;
+    }
+    .form-group {
+        // has white background
+        background-color: white;
+        color: black;
+        border-radius: 4px;
+        padding-top: 0.5em;
+        // has fields
+        .form-item {
+            margin: 0 $margin-def;
+        }
+        .form-textarea {
+            margin: 0 $margin-def;
+            margin-bottom: $margin-def;
+        }
+    }
+    input {
+        font-size: inherit;
+        line-height: 2;
+        font-weight: bolder;
+    }
+    .form-textarea {
+        margin-bottom: $margin-less;
+    }
+
+}
 
 
 //* ------------------------------------ support features
@@ -76,10 +203,11 @@ $margin-half: $margin-half;
 .dev-box, dev-box {
     background-color: hsla(229, 55%, 12%, 0.7);
     color: white;
-    font-size: 2em;
+    font-size:  2em;
     width: 100%;
+    min-width:  8rem;
     max-width: 36rem;
-    min-height: 18rem;
+    min-height: 8rem;
     display: flex;
     justify-content: center;
     align-items: center;
