--- a/appDev/app6K/app/style/app_components/_workers.scss
+++ b/appDev/app6K/app/style/app_components/_workers.scss
@@ -17,6 +17,41 @@ $hover-item-outline-design:          1rem solid hsla(177, 42%, 76%, 0.25);
 }
 /**/
 
+//* ------------------------------------ form component
+%form-item {
+    // has row layout
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: center;
+    &>*     { order: 3 }
+    &>label { order: 1 }
+    &>input { order: 2 }
+}
+.form-item     { @extend %form-item; }
+.form-textarea { @extend %form-item; }
+.form-submit   { @extend %form-item; }
+label {
+    display: block;
+}
+input {
+    display: block;
+    width: 100%;
+    padding: 0.25em 1em;
+}
+textarea {
+    display: block;
+    width: 100%;
+    padding: 1em;
+    resize: vertical;
+}
+button {
+    padding: 0.25em 1em;
+}
+/**/
+
 //* ------------------------------------ universal shadow overlay
 .has-shadow-overlay {
     overflow: hidden;
